mathutils.bvhtree crashes with distance input #46520

Closed
opened 2015-10-17 19:27:26 +02:00 by Jacques Lucke · 9 comments
Member

System Information
Windows 7 64 bit
Nvidia Quadro 600

Blender Version
Broken: bfdb420

Short description of error
Trying to use the distance input of this function crashes Blender: http://www.blender.org/api/blender_python_api_2_76_1/mathutils.bvhtree.html?highlight=bvh#mathutils.bvhtree.BVHTree.ray_cast

To reproduce the error just copy this script into the text editor and run it:

from mathutils import Vector
from mathutils.bvhtree import BVHTree

bvh = BVHTree.FromPolygons(vertices = [], polygons = [])
bvh.ray_cast(Vector((0, 0, 0)), Vector((1, 0, 0)), 5)

when I try this without ", 5" it does not crash.

I know this is not the place for feature requests, but is it possible to have a minimum distance? That would be helpful when I want to spawn another ray from the location a first ray_cast gave me. Otherwise the function always gives me the same point. Yes I could offset the ray start vector in the direction of the normal but maybe a Min Distance would be better :)

**System Information** Windows 7 64 bit Nvidia Quadro 600 **Blender Version** Broken: bfdb420 **Short description of error** Trying to use the distance input of this function crashes Blender: http://www.blender.org/api/blender_python_api_2_76_1/mathutils.bvhtree.html?highlight=bvh#mathutils.bvhtree.BVHTree.ray_cast To reproduce the error just copy this script into the text editor and run it: ``` from mathutils import Vector from mathutils.bvhtree import BVHTree bvh = BVHTree.FromPolygons(vertices = [], polygons = []) bvh.ray_cast(Vector((0, 0, 0)), Vector((1, 0, 0)), 5) ``` when I try this without ", 5" it does not crash. I know this is not the place for feature requests, but is it possible to have a minimum distance? That would be helpful when I want to spawn another ray from the location a first ray_cast gave me. Otherwise the function always gives me the same point. Yes I could offset the ray start vector in the direction of the normal but maybe a Min Distance would be better :)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Can confirm the crash

Can confirm the crash

Added subscriber: @mont29

Added subscriber: @mont29

Confirmed, dummy typo in code ;)

Confirmed, dummy typo in code ;)
Bastien Montagne self-assigned this 2015-10-18 12:08:55 +02:00

This issue was referenced by 5551948b31

This issue was referenced by 5551948b31691aa1ce817d78c13c173823a4dd6c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Re minimum distance, as far as I have understood BVH process, not sure this is really possible - not without breaking the whole purpose of BVH, which is being able to only check a very small subset of items, instead of all of them…

Re minimum distance, as far as I have understood BVH process, not sure this is really possible - not without breaking the whole purpose of BVH, which is being able to only check a very small subset of items, instead of all of them…
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46520
No description provided.