Fix T46520: mathutils.bvhtree crashes with distance input.

Should be backported to 'a' release.